tests/fixtures/invalid/pow_list_int.py
# Cannot call pow() with List[int], Int
x = pow([1, 2, 3], 1)
